--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@hookform/resolvers": "^2.8.8",
     "framer-motion": "^6.2.8",
+    "graphql-hooks": "^5.11.4",
     "ngrok": "^4.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -17,8 +18,10 @@
     "react-icons": "^4.4.0",
     "react-route-transition": "^1.0.6",
     "react-router-dom": "^6.2.2",
+    "react-slick": "^0.29.0",
     "react-social-icons": "^5.14.0",
     "react-transition-group": "^4.4.2",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.3",
     "yup": "^0.32.11"
   },
