--- a/package.json
+++ b/package.json
@@ -6,15 +6,35 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "commit": "cz"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@hookform/resolvers": "^2.9.8",
+    "@mui/material": "^5.10.5",
+    "babel-plugin-styled-components": "^2.0.7",
+    "commitizen": "^4.2.5",
+    "graphql": "^16.6.0",
+    "graphql-request": "^5.0.0",
     "next": "12.3.0",
+    "notistack": "^2.0.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-datocms": "^3.1.1",
+    "react-dom": "18.2.0",
+    "react-icons": "^4.4.0",
+    "react-social-icons": "^5.14.0",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
+    "cz-conventional-changelog": "3.3.0",
     "eslint": "8.23.1",
     "eslint-config-next": "12.3.0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
